--- a/main.css
+++ b/main.css
@@ -43,6 +43,15 @@ h1 {
   line-height: 1.2;
 }
 
+h1 small {
+  font-size: 0.5em;
+  background: #ddd;
+  display: inline-block;
+  padding: 2px 4px;
+  color: #222;
+  line-height: 1em;
+}
+
 h2 {
   font-size: 2.8em;
 }
